assets/css/styles.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Kumbh Sans', sans-serif;
}

.arrow {
  align-items: end !important;
}

html {
  scroll-behavior: smooth;
}

p {
  font-size: 20px;
}

h1 {
  padding-top: 25px;
}

.white {
  background: #ffffff;
  height: fit-content;
}

.grey {
  background:#ededed;
  height: fit-content;
}

.anchors {
  display: block;
  position: relative;
  visibility: hidden;
}

.nav-link {
  background-color: #ff8177;
  background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  cursor: pointer;
  font-size: 1.25rem !important;
}

.navbar-nav > li{
  padding: 0px 5px;
}

.fa-fire-flame-curved {
  margin-right: 0.5rem;
}

.form {
  text-decoration: none;
  color: #fff;
  padding: 10px 20px;
  border: none;
  outline: none;
  border-radius: 4px;
  background: #f77062;
  font-size: 1rem;
  margin: 10px 0px;
  position: relative;
}

.form:hover {
  cursor: pointer;
  background: #4837ff;
  transition: all 0.3s ease;
}

.nav-link:hover, .fa-angles-down:hover {
  background-image: linear-gradient(to top, #b721ff 0%, #21d4fd 100%);
  transition: all 0.3s ease;
}

.fa-angles-down {
  background-color: #ff8177;
  background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  cursor: pointer;
  font-size: 25px;
}

#included p {
  display: inline-block; 
  text-align: left
}

.prices {
  padding: 40px 25px;
  white-space: nowrap;
}

footer {
  background-color: #131313;
}

footer p {
  color: #ffffff;
}

#main-slider .splide__slide{
  height: 500px;
}

.splide__slide img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.splide__slide {
  opacity: 0.6;
}

.splide__slide.is-active {
  opacity: 1;
}

.navbar button.navbar-toggler:hover {
  border-color: #ffffff;
  background: #4837ff;
  transition: all 0.3s ease;
}

.navbar button.navbar-toggler:hover .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
}

.hero {
  height: 100svh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hero:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #000000;
  opacity: .4;
  z-index: -1;
}

.hero h1 {
  filter: drop-shadow(2px 2px #000000) 
  drop-shadow(-2px -2px #000000)
  drop-shadow(-2px 2px #000000)
  drop-shadow(2px -2px #000000);
  background-color: #ff8177; 
  background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  font-size: 4rem;
}

.hero a {
  position: absolute;
  top: 50vh;
}

.backgrounds-container {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: -5;
}

.background {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 0;
  transition: opacity 1s ease-in-out;
}

.showing {
  opacity: 1;
  z-index: -1;
  transition: none;
}

.bounce {
  animation: bounce 3s infinite;
  animation-delay: 4s;
}

@keyframes bounce {
  0%, 10%, 40%, 70%, 100% {
    transform: translateY(0);
  }
  30% {
    transform: translateY(-10px);
  }
  50% {
    transform: translateY(-5px);
  }
}

@media (max-width: 576px) {
  h1 {
    font-size: 2rem !important;
  }
}

